--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -1,4 +1,4 @@
-<div class="about-me">
+<!-- <div class="about-me">
     
     <div class="card">
         <div class="tools">
@@ -19,4 +19,45 @@
             <p>Feel free to contact me at for any inquiries or collaborations.</p>
         </div>
     </div>
+</div>
+ -->
+ <div class="about-me-container">
+    <div class="profile-card">
+        <img src="./../../assets/img/Untitled.png" alt="Monalisa Ashley" class="profile-img">
+        <h2>Cherradi Amine</h2>
+        <p class="title">Full Stack Web Developer</p>
+        <div class="contact-info">
+            <p><strong>Phone:</strong> +212 671 750 088</p>
+            <p><strong>Email:</strong> aminecherradi99&#64;gmail.com</p>
+            <p><strong>Location:</strong> Al Hoceima, Morroco</p>
+            <p><strong>Birthday:</strong> Sep 30, 1996</p>
+        </div>
+        <a href="#" class="download-cv">Download CV</a>
+    </div>
+    <div class="about-content">
+        <h1>About</h1>
+        <p>Experienced Full Stack Developer proficient in PHP, AJAX, Angular, and Node.js. Dedicated to mastering new technologies and delivering top-notch web solutions. Ready to contribute expertise to dynamic projects and drive success through innovation.</p>
+        <p>Feel free to contact me at for any inquiries or collaborations.</p>
+        <h2>What I Do!</h2>
+        <div class="services">
+          <div class="service">
+            <h3>Front-end Development</h3>
+              <ul>
+                <li>Develop responsive web applications using Angular.</li>
+                <li>Integrate with backend APIs.</li>
+                <li>Handle asynchronous operations using RxJS.</li>
+              </ul>
+          </div>
+          <div class="service">
+            <h3>Back-end Development</h3>
+            <ul>
+              <li>Develop RESTful APIs using Node.js and Express framework.</li>
+              <li>Implement authentication and authorization mechanisms (e.g., JWT).</li>
+              <li>Integrate with databases (SQL and/or NoSQL).</li>
+              <li>Handle security and data protection.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      
 </div>
