--- a/src/app/section-2/section-2.component.html
+++ b/src/app/section-2/section-2.component.html
@@ -41,6 +41,19 @@
                     </div>
                 </div>
             </div>
+            <div #option4 class="option" (click)="setActive(option4)"
+                style="Background:url(../../assets/img/moni.png); background-size: cover;background-position: center;background-repeat: no-repeat;">
+                <div class="shadow"></div>
+                <div class="label">
+                    <div class="icon">
+                        <img src="../../assets/img/angular.png" style="width: 30px;">
+                    </div>
+                    <div class="info">
+                        <div class="main">Fille d'Attente Monitor</div>
+                        <div class="sub">Fullstack Angular + nodejs project</div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
