--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -5,6 +5,8 @@
     justify-content: flex-end;
     min-height: 91vh;
     position: relative;
+    margin-bottom: 30px;
+    margin-top: 30px;
   }
   
   .item-body {
@@ -119,7 +121,7 @@
     border-radius: 20px;
     left: 0.3em;
     bottom: 0.3em;
-    background-color: yellow;
+    background-color: rgb(255, 255, 255);
     transition: .4s;
   }
   
@@ -184,7 +186,7 @@
         &:after, &:before {
             position: absolute;
             top: 0;
-            color: #16a085;
+            color: #2196F3;
             font-size: 42px;
             line-height: 40px;
             -webkit-animation-name: opacity;
