--- a/src/app/section-2/section-2.component.scss
+++ b/src/app/section-2/section-2.component.scss
@@ -1,10 +1,13 @@
 
-
+.section-2{
+   margin-bottom: 30px;
+   margin-top: 30px;
+}
 .section-2 h1{
     display: flex;
     justify-content: center;
     gap: 10px;
-    font-family: 'Brush Script MT', cursive;
+    font-family: 'Calibri', cursive;
     text-transform: uppercase;
     font-weight: lighter;
     align-items: center;
