--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,10 @@
 *{
-  font-family: 'Brush Script MT', cursive;
+  font-family: 'Calibri', cursive;
 }
 body {
     width: 100%;
     height: 100%;
-    background-color: #F8F6E3;
+    
     margin: 0;
   }
 
@@ -12,8 +12,19 @@ body {
     h1,p,.content__container__list__item{
       color: #fff;
     }
-    .layout,.header,.section1,.section2,.section3{
-      background-color: #121212;
+    .header[_ngcontent-ng-c2714602935],.section2[_ngcontent-ng-c2714602935]{
+      background-color: #5B5B5B;
+    }
+    .about-me-container[_ngcontent-ng-c3319053371]{
+      background-color: #7F7F7F;
+    }
+    .about-content[_ngcontent-ng-c3319053371] ,.profile-card[_ngcontent-ng-c3319053371],.layout,.section1,.section3{
+      background-color: #1F1F1F;
+    }
+    .about-content[_ngcontent-ng-c3319053371] {
+      p[_ngcontent-ng-c3319053371]{
+        color: #fff;
+      }
     }
     .card[_ngcontent-ng-c1557262799] {
       background-color: #16a085;
