--- a/src/app/section-2/section-2.component.html
+++ b/src/app/section-2/section-2.component.html
@@ -49,7 +49,7 @@
                         <img src="../../assets/img/angular.png" style="width: 30px;">
                     </div>
                     <div class="info">
-                        <div class="main">Fille d'Attente Monitor</div>
+                        <div class="main">Fille d'attente Monitor</div>
                         <div class="sub">Fullstack Angular + nodejs project</div>
                     </div>
                 </div>
