--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -32,7 +32,7 @@
             <p><strong>Location:</strong> Al Hoceima, Morroco</p>
             <p><strong>Birthday:</strong> Sep 30, 1996</p>
         </div>
-        <a href="#" class="download-cv">Download CV</a>
+        <a href="./../../assets/CV Linkdn.pdf" class="download-cv">Download CV</a>
     </div>
     <div class="about-content">
         <h1>About</h1>
