--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="container-b">
     <div class="logo">
         <!-- Your logo image goes here -->
-        <a href=""><img src="./../../assets/img/github.png" alt="Logo"></a>
+        <a href="https://github.com/Amincherradi"><img src="./../../assets/img/github.png" alt="Logo"></a>
     </div>
     <div class="language-icons">
         <img src="./../../assets/img/us.png" alt="English" class="language-icon">
