--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,9 @@
 <div class="container-b">
     <div class="logo">
-        <!-- Your logo image goes here -->
-        <a href="https://github.com/Amincherradi"><img src="./../../assets/img/github.png" alt="Logo"></a>
+        <a href="https://github.com/Amincherradi"><img src="./../../assets/img/github.png" alt="GitHub Logo"></a>
+        <a href="https://www.linkedin.com/in/amine-cherradi-610025151/"><img src="./../../assets/img/lnkdn.png" alt="LinkedIn Logo"></a>
     </div>
+    
     <div class="language-icons">
         <img src="./../../assets/img/us.png" alt="English" class="language-icon">
         <img src="./../../assets/img/fr.png" alt="French" class="language-icon">
