--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,13 +12,13 @@ body {
     h1,p,.content__container__list__item{
       color: #fff;
     }
-    .header[_ngcontent-ng-c2714602935],.section2[_ngcontent-ng-c2714602935]{
+   .section2[_ngcontent-ng-c2714602935],.section2[_ngcontent-ng-c1531255638]{
       background-color: #5B5B5B;
     }
-    .about-me-container[_ngcontent-ng-c3319053371]{
+    .section1[_ngcontent-ng-c1531255638],.section3[_ngcontent-ng-c1531255638]{
       background-color: #7F7F7F;
     }
-    .about-content[_ngcontent-ng-c3319053371] ,.profile-card[_ngcontent-ng-c3319053371],.layout,.section1,.section3{
+    .header[_ngcontent-ng-c1531255638],.profile-card[_ngcontent-ng-c178069358] ,.about-content[_ngcontent-ng-c178069358]{
       background-color: #1F1F1F;
     }
     .about-content[_ngcontent-ng-c3319053371] {
